Updated about me and degree stuff

--- a/index.html
+++ b/index.html
@@ -121,28 +121,13 @@
                 <div class="column large-9 tab-12 s-about__content">
                     <h3>About Me</h3>
                     <p>
-                        I am fueled by a profound curiosity for unraveling the intricacies of the world and everything it encompasses. My enduring passion for adventure fuels my joy in identifying challenges and crafting innovative
-                        solutions—a pursuit that brings me genuine satisfaction. This same spark propels me forward, whether I'm navigating professional milestones or pursuing personal dreams.
+                        I am driven by a curiosity to understand the complexities of the world. My enduring passion for adventure fuels my joy in identifying and solving challenges, be it in professional milestones or personal pursuits. Collaboration is where I thrive, finding inspiration in diverse teams and unique contributions to meaningful improvements.
                     </p>
                     <p>
-                        Collaboration is where I thrive. I find inspiration in working with diverse teams, where each member contributes unique ideas to foster improvements of any kind.
+                        Fascinated by cybersecurity since high school, I rediscovered this passion during college and embarked on a continuous journey of knowledge and growth in the field. As a Security Engineer, I've significantly enhanced organizational security through purple teaming activities, identifying critical gaps, boosting infrastructure visibility, and strengthening detection and response capabilities. My expertise extends to implementing advanced security controls, fortifying computer systems with robust system hardening, and crafting detailed incident response processes for swift and effective resolution. In my role as a SOC Analyst, I actively contributed to continuous monitoring and developed innovative detection techniques. Moreover, I have a penchant for automating routine tasks, streamlining workflows for myself and my team.
                     </p>
                     <p>
-                        I've always been fascinated by cybersecurity. It's like a hidden world waiting to be explored — a world I first encountered during high school through a training poster.Though initially overlooked in the fast-paced
-                        world, I revisited this passion during my college years. Connecting with like-minded individuals, I seized the opportunity to resurrect this dormant dream. Since then, my journey has been a continuous pursuit of
-                        knowledge and growth in the realm of cybersecurity.
-                    </p>
-                    <p>
-                        As a Security Engineer, I have demonstrated a solid background in enhancing organizational security. Through engaging in purple teaming activities, I've identified critical gaps in security controls, significantly
-                        boosting infrastructure visibility, and fortifying detection and response capabilities. My expertise extends to implementing advanced security controls for endpoints I specialize in fortifying computer systems
-                        through the design and implementation of robust system hardening guidelines. Additionally, I've crafted detailed incident response processes, ensuring swift and effective resolution to security incidents. During my
-                        role as a SOC Analyst, I utilized a range of security tools and actively contributed to continuous monitoring and developed innovative detection techniques, playing a vital role in incident response efforts.
-                        Additionally, I have a penchant for automating routine tasks, streamlining workflows for myself and my team.
-                    </p>
-                    <p>
-                        Outside of work, I'm somewhat of a car enthusiast. I love driving and learning about cars. Understanding how different cars work and what makes them unique is a passion of mine. I'm also fascinated by human
-                        psychology. Figuring out why people think and behave the way they do is something I find incredibly interesting. Additionally, physics, especially the concepts of time and space, is my favorite subject. Exploring the
-                        mysteries of the universe and how it all fits together captivates my imagination.
+                        Outside of work, I am somewhat of a car enthusiast. Exploring human psychology, figuring out why people think and act the way they do, is something I find interesting. I also enjoy physics, especially the concepts of time and space. Unraveling the mysteries of the universe and how it all fits together captivates my imagination.
                     </p>
 
                     <hr />
@@ -193,38 +178,43 @@
 
                         <ul>
                             <li>
-                                Performed several Purple Teaming activities along with the Red Team to identify and cover any gaps in the logging, detections and response capabilities.
+                                Continuous monitoring on several security tools and analysis of the alerts to swiftly detect and mitigate security threats.                            
                             </li>
                             <li>
-                                Integration of essential log sources with centralized security tools, improving real-time threat visibility and reducing incident response time.
+                                Contribution to incident investigations by identifying root causes and collaborating on security improvements.                            
                             </li>
                             <li>
-                                Improvements in detection quality to cover a larger amount of attack vector and reduced the false positive noise.
+                                Collaboration in incident response efforts to contain and remediate threats, minimizing potential impact and safeguarding the organization.                            
                             </li>
                             <li>
-                                Implementation of advanced security controls for endpoints and cloud environments, resulting in a decrease in security incidents and a reduction in potential data breaches.
+                                Development and improvement detections to cover a broader range of attack vectors and reduced false positive noise.                            
                             </li>
                             <li>
-                                Design and implementation of several system hardening guidelines.
+                                Gap identification and analysis in the organization's infrastructure and systems, leading to an improved overall security posture.                            
                             </li>
                             <li>
-                                Implementing a secure service delegation model between the organization’s the service provider’s infrastructure.
-                            </li>
-                            <li>Formulated comprehensive incident response processes and procedures, automating responses.</li>
-                            <li>
-                                Leveraged Terraform Infrastructure as Code (IAC) to transform cloud infrastructure, enhancing security, stability and compliance standards.
+                                Integration of essential log sources with centralized security tools, enhancing real-time threat visibility and reducing incident response time.                            
                             </li>
                             <li>
-                                Continuous monitoring and analysis to swiftly detect security attacks, leading to the development of innovative detection techniques to bolster threat identification.
+                                Formulating comprehensive incident response processes and procedures, automating responses using native automations and other 3rd party integrations.
                             </li>
                             <li>
-                                Contibutions to incident investigations by identifying root causes and collaborating on security improvements.
+                                Advanced security controls for endpoints and cloud environments, resulting in decreased security incidents and potential data breaches.
                             </li>
                             <li>
-                                Collaboration in incident response efforts to contain and remediate threats, minimizing potential impact and safeguarding the organization.
+                                Design and implementation of system hardening guidelines for endpoints, cloud environments and software services.
                             </li>
                             <li>
-                                Actively promoted efficiency and accuracy by automating daily operational workflows, including security detection and response components, for the benefit of the organization.
+                                Purple Teaming activities with the Red Team to identify and cover gaps in logging, detections, and response capabilities.
+                            </li>
+                            <li>
+                                Secure service delegation between the service providers and customers.
+                            </li>
+                            <li>
+                                Use of Terraform Infrastructure as Code (IAC) to transform cloud infrastructure to code, enhancing security, stability, and compliance standards.
+                            </li>
+                            <li>
+                                Promoting efficiency and accuracy by automating daily operations for the benefit of the organization and a smooth workflow.
                             </li>
                         </ul>
                     </div>
@@ -272,13 +262,14 @@
                                 </span>
                             </p>
                         </div>
-
-                        <p>
-                            During my Software Engineering degree, a significant project I undertook was "Security Events Enumeration & Detection (SEED)." Integrating knowledge from Digital Forensics, Network Security, Cryptography,
-                            Computer Networks, Operating Systems, Programming, and Data Structures & Algorithms, the project utilized the ELK stack for a proactive cybersecurity solution. This venture showcased my software engineering
-                            skills by applying programming and algorithmic thinking to create a system that not only enumerated security events but also proactively detected potential threats. The project highlighted the synergy between
-                            software engineering principles and cybersecurity concepts, emphasizing a strategic and proactive mindset crucial for addressing real-world cybersecurity challenges.
-                        </p>
+                        <ul>
+                            <li>
+                                SEED [Security Events Enumeration & Detection] - my final year project - a proactive log collection, monitoring and security detection solution
+                            </li>
+                            <li>
+                                Integrated knowledge from Network Security, Cryptography, Digital Forensics, Computer Networks, Operating Systems, Programming, and Data Structures & Algorithms.
+                            </li>
+                        </ul>
                     </div>
                     <!-- end resume-block -->
                 </div>
@@ -295,35 +286,35 @@
                             I find myself proficient and consistent in learning new tools, technologies and skills. My major skills lie around defense against cyber threats - monitoring and analysis of security alerts and incidents, making
                             new detections, formulating incident response and creating processes and procedures along with automations of routine tasks.
                         </p>
-
-                        <ul class="skill-bars-fat">
-                            <li>
-                                <div style="height: 2rem;" class="progress percent90"></div>
-                                <strong>Detection, Monitoring & Incident Management</strong>
-                            </li>
-                            <li>
-                                <div style="height: 2rem;" class="progress percent80"></div>
-                                <strong>Cloud Security</strong>
-                            </li>
-                            <li>
-                                <div style="height: 2rem;" class="progress percent65"></div>
-                                <strong>Security Posture Management</strong>
-                            </li>
-                            <li>
-                                <div style="height: 2rem;" class="progress percent85"></div>
-                                <strong>Identity & Access Management</strong>
-                            </li>
-                            <li>
-                                <div style="height: 2rem;" class="progress percent90"></div>
-                                <strong>Network Security</strong>
-                            </li>
-                            <li>
-                                <div style="height: 2rem;" class="progress percent90"></div>
-                                <strong>Programming, Scripting & Automation</strong>
-                            </li>
-                        </ul>
                     </div>
                     <!-- end resume-block -->
+                    <!--                    <ul class="skill-bars-fat">-->
+                        <ul>
+                            <li>
+                                <!--<div style="height: 2rem;" class="progress percent90"></div>-->                                
+                                <p>Security Detection, Monitoring & Incident Management</p>
+                            </li>
+                            <li>
+                                <!--<div style="height: 2rem;" class="progress percent90"></div>-->                                
+                                <p>Cloud Security</p>
+                            </li>
+                            <li>
+                                <!--<div style="height: 2rem;" class="progress percent90"></div>-->                                
+                                <p>Security Posture Management</p>
+                            </li>
+                            <li>
+                                <!--<div style="height: 2rem;" class="progress percent90"></div>-->                                
+                                <p>Identity & Access Management</p>
+                            </li>
+                            <li>
+                                <!--<div style="height: 2rem;" class="progress percent90"></div>-->                                
+                                <p>Network Security</p>
+                            </li>
+                            <li>
+                                <!--<div style="height: 2rem;" class="progress percent90"></div>-->                                
+                                <p>Programming, Scripting & Automation</p>
+                            </li>
+                        </ul>
                 </div>
             </div>
             <!-- s-resume__section -->
