--- a/index.html
+++ b/index.html
@@ -292,27 +292,27 @@
                         <ul>
                             <li>
                                 <!--<div style="height: 2rem;" class="progress percent90"></div>-->                                
-                                <p>Security Detection, Monitoring & Incident Management</p>
+                                <p style="margin: 1rem;">Security Detection, Monitoring & Incident Management</p>
                             </li>
                             <li>
                                 <!--<div style="height: 2rem;" class="progress percent90"></div>-->                                
-                                <p>Cloud Security</p>
+                                <p style="margin: 1rem;">Cloud Security</p>
                             </li>
                             <li>
                                 <!--<div style="height: 2rem;" class="progress percent90"></div>-->                                
-                                <p>Security Posture Management</p>
+                                <p style="margin: 1rem;">Security Posture Management</p>
                             </li>
                             <li>
                                 <!--<div style="height: 2rem;" class="progress percent90"></div>-->                                
-                                <p>Identity & Access Management</p>
+                                <p style="margin: 1rem;">Identity & Access Management</p>
                             </li>
                             <li>
                                 <!--<div style="height: 2rem;" class="progress percent90"></div>-->                                
-                                <p>Network Security</p>
+                                <p style="margin: 1rem;">Network Security</p>
                             </li>
                             <li>
                                 <!--<div style="height: 2rem;" class="progress percent90"></div>-->                                
-                                <p>Programming, Scripting & Automation</p>
+                                <p style="margin: 1rem;">Programming, Scripting & Automation</p>
                             </li>
                         </ul>
                 </div>
