--- a/index.html
+++ b/index.html
@@ -458,6 +458,15 @@
                             </p>
                         </div>
                         <!-- end contact-block -->
+                        <div class="contact-block">
+                            <h5 class="contact-block__header">
+                                Blog
+                            </h5>
+                            <p>
+                                <a href="https://medium.com/@aliahmeddarhere">medium.com/@aliahmeddarhere</a>
+                            </p>
+                        </div>
+                        <!-- end contact-block -->
                     </div>
 
                     <div class="column large-5 medium-12">
