Add Medium link

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                                 Email
                             </h4>
                             <p>
-                                <a class="mailtoui" href="mailto:aliahmeddarhere@gmail.com">aliahmeddarhere@gmail.com</a>
+                                <a target="_blank" class="mailtoui" href="mailto:aliahmeddarhere@gmail.com">aliahmeddarhere@gmail.com</a>
                             </p>
                         </div>
                         <!-- end contact-block -->
@@ -436,7 +436,7 @@
                                 Phone
                             </h5>
                             <p>
-                                <a href="tel:+923041079717">+92 304 1079717</a>
+                                <a target="_blank" href="tel:+923041079717">+92 304 1079717</a>
                             </p>
                         </div>
                         <!-- end contact-block -->
@@ -445,7 +445,7 @@
                                 Linkedin
                             </h5>
                             <p>
-                                <a href="https://www.linkedin.com/in/ali-ahmed-dar/">ali-ahmed-dar</a>
+                                <a target="_blank" href="https://www.linkedin.com/in/ali-ahmed-dar/">ali-ahmed-dar</a>
                             </p>
                         </div>
                         <!-- end contact-block -->
@@ -454,16 +454,16 @@
                                 Github
                             </h5>
                             <p>
-                                <a href="https://github.com/ali-ahmed-dar">ali-ahmed-dar</a>
+                                <a target="_blank" href="https://github.com/ali-ahmed-dar">ali-ahmed-dar</a>
                             </p>
                         </div>
                         <!-- end contact-block -->
                         <div class="contact-block">
                             <h5 class="contact-block__header">
-                                Blog
+                                Medium Blog
                             </h5>
                             <p>
-                                <a href="https://medium.com/@aliahmeddarhere">medium.com/@aliahmeddarhere</a>
+                                <a target="_blank" href="https://medium.com/@aliahmeddarhere">@aliahmeddarhere</a>
                             </p>
                         </div>
                         <!-- end contact-block -->
