--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                         <li><a class="smoothscroll" href="#portfolio">Works</a></li>
                         <!--<li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>-->
                         <li><a class="smoothscroll" href="#contact">Say Hello</a></li>
+                        <li><a class="smoothscroll" target="_blank" href="https://medium.com/@aliahmeddarhere">Blog</a></li>
                     </ul>
                 </nav>
             </div>
