update uni subjects

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                                 SEED [Security Events Enumeration & Detection] - my final year project - a proactive log collection, monitoring and security detection solution
                             </li>
                             <li>
-                                Integrated knowledge from Network Security, Cryptography, Digital Forensics, Computer Networks, Operating Systems, Programming, and Data Structures & Algorithms.
+                                Major subjects included Network Security, Cryptography, Digital Forensics, Computer Networks, Operating Systems, Programming, and Data Structures & Algorithms.
                             </li>
                         </ul>
                     </div>
