Add some more tools

--- a/index.html
+++ b/index.html
@@ -388,7 +388,21 @@
                                 
                 <div class="column folio-item" style="border: 2px black;">
                     <a href="#modal-08" class="folio-item__thumb">
-                        <img src="images/portfolio/construction.jpg" srcset="images/portfolio/construction.jpg" style="border:2px solid lightgray;" alt="" />
+                        <img src="images/portfolio/OKTA.png" srcset="images/portfolio/OKTA.png" style="border:2px solid lightgray;" alt="" />
+                    </a>
+                </div>
+                <!-- end folio-item -->
+
+                <div class="column folio-item" style="border: 2px black;">
+                    <a href="#modal-09" class="folio-item__thumb">
+                        <img src="images/portfolio/wiz.png" srcset="images/portfolio/wiz.png" style="border:2px solid lightgray;" alt="" />
+                    </a>
+                </div>
+                <!-- end folio-item -->
+
+                <div class="column folio-item" style="border: 2px black;">
+                    <a href="#modal-10" class="folio-item__thumb">
+                        <img src="images/portfolio/terraform.png" srcset="images/portfolio/terraform.png" style="border:2px solid lightgray;" alt="" />
                     </a>
                 </div>
                 <!-- end folio-item -->
@@ -524,13 +538,47 @@
 
             <div id="modal-08" hidden>
                 <div class="modal-popup">
-                    <img src="images/portfolio/gallery/construction.png" alt="" />
+                    <img src="images/portfolio/gallery/OKTA.png" alt="" />
 
                     <div class="modal-popup__desc">
-                        <h5>Under construction</h5>
-                        <p>Stay tuned for more tools, this website is still under construction.</p>
+                        <h5>Okta</h5>
+                        <p>Identity and access management with Okta's functionality to work as an SSO and IDP for several other softwares and applications, along with user provisioning.</p>
                         <ul class="modal-popup__cat">
-                            <li>Under construction</li>
+                            <li>SSO</li>
+                            <li>IAM</li>
+                            <li>IDP</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- end modal -->
+
+            <div id="modal-09" hidden>
+                <div class="modal-popup">
+                    <img src="images/portfolio/gallery/wiz.png" alt="" />
+
+                    <div class="modal-popup__desc">
+                        <h5>Wiz</h5>
+                        <p>Integration of cloud with Wiz to continuously scan and discover vulnerabilities and misconfigurations and patch them for a secure cloud infrastructure.</p>
+                        <ul class="modal-popup__cat">
+                            <li>CSPM</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- end modal -->
+            
+            <div id="modal-10" hidden>
+                <div class="modal-popup">
+                    <img src="images/portfolio/gallery/terraform.png" alt="" />
+
+                    <div class="modal-popup__desc">
+                        <h5>Terraform</h5>
+                        <p>Enabling seamless provisioning, managing, and scaling of cloud resources with the help of Infrastructure as code (IAC) for enhanced redundancy and efficiency in the infrastructure.</p>
+                        <ul class="modal-popup__cat">
+                            <li>IAC</li>
+                            <li>Hashicorp</li>
+                            <li>Terraform</li>
                         </ul>
                     </div>
                 </div>
