--- a/index.html
+++ b/index.html
@@ -407,6 +407,13 @@
                 </div>
                 <!-- end folio-item -->
 
+                <div class="column folio-item" style="border: 2px black;">
+                    <a href="#modal-11" class="folio-item__thumb">
+                        <img src="images/portfolio/automation.png" srcset="images/portfolio/automation.png" style="border:2px solid lightgray;" alt="" />
+                    </a>
+                </div>
+                <!-- end folio-item -->
+
             </div>
             <!-- end folio-list -->
 
@@ -584,6 +591,25 @@
                 </div>
             </div>
             <!-- end modal -->
+                        
+            <div id="modal-11" hidden>
+                <div class="modal-popup">
+                    <img src="images/portfolio/gallery/automation.png" alt="" />
+
+                    <div class="modal-popup__desc">
+                        <h5>Automation & Scripting</h5>
+                        <p>Streamlining daily operations by automating repetitive tasks through scripts crafted in Bash, CMD, and Python, enhancing overall workflow efficiency.</p>
+                        <ul class="modal-popup__cat">
+                            <li>Bash</li>
+                            <li>Batch</li>
+                            <li>CMD</li>
+                            <li>Python</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- end modal -->
+
         </section>
         <!-- end s-portfolio -->
 
