--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
                         </h3>
                         
                         <h3>
-                            I'm a <span>Security Engineer</span>, skilled in <span>monitoring</span> and <span>detection</span> of <span>cyber threats</span> - equipped with a passion for
-                            <span>strengthening organizational defenses</span> and <span>optimizing incident response</span>.
+                            <span>I'm a Security Engineer, skilled in monitoring and detection of cyber threats - equipped with a passion for
+                            strengthening organizational defenses and optimizing incident response</span>.
                         </h3>
-                        <h3>Beyond my professional pursuits, I'm passionate about <span>technology</span>, fascinated by <span>human psychology</span>, and committed to making a positive impact through <span>social work</span>.</h3>
-                        <h3>Let's <a class="smoothscroll" href="#about">start scrolling</a> and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
+                        <h3><span>Beyond my professional pursuits, I'm passionate about technology, fascinated by human psychology, and committed to making a positive impact through social work.</span></h3>
+                        <h3><span></spa> Let's <a class="smoothscroll" href="#about">start scrolling</a> and learn more <a class="smoothscroll" href="#about">about me</a>.</span></h3>
                         <!--
                     <div class="s-hero__content-social">
                         <a href="#0"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
@@ -335,7 +335,7 @@
                 </div>
             </div>
 
-            <div class="row collapse block-large-1-5 block-medium-1-4 block-tab-1-3 block-500-stack folio-list">
+            <div class="row collapse block-large-1-5 block-medium-1-5 block-tab-1-3 block-500-stack folio-list" style="display: flex; justify-content: center;">
                 <div class="column folio-item">
                     <a href="#modal-01" class="folio-item__thumb">
                         <img src="images/portfolio/Sentinel.jpg" srcset="images/portfolio/Sentinel.jpg"  style="border:2px solid lightgray;" alt="" />
