--- a/index.html
+++ b/index.html
@@ -297,27 +297,27 @@
                         <ul>
                             <li>
                                 <!--<div style="height: 2rem;" class="progress percent90"></div>-->                                
-                                <p style="margin: 1rem;">Security Detection, Monitoring & Incident Management</p>
+                                <p>Security Detection, Monitoring & Incident Management</p>
                             </li>
                             <li>
                                 <!--<div style="height: 2rem;" class="progress percent90"></div>-->                                
-                                <p style="margin: 1rem;">Cloud Security</p>
+                                <p>Cloud Security</p>
                             </li>
                             <li>
                                 <!--<div style="height: 2rem;" class="progress percent90"></div>-->                                
-                                <p style="margin: 1rem;">Security Posture Management</p>
+                                <p>Security Posture Management</p>
                             </li>
                             <li>
                                 <!--<div style="height: 2rem;" class="progress percent90"></div>-->                                
-                                <p style="margin: 1rem;">Identity & Access Management</p>
+                                <p>Identity & Access Management</p>
                             </li>
                             <li>
                                 <!--<div style="height: 2rem;" class="progress percent90"></div>-->                                
-                                <p style="margin: 1rem;">Network Security</p>
+                                <p>Network Security</p>
                             </li>
                             <li>
                                 <!--<div style="height: 2rem;" class="progress percent90"></div>-->                                
-                                <p style="margin: 1rem;">Programming, Scripting & Automation</p>
+                                <p>Programming, Scripting & Automation</p>
                             </li>
                         </ul>
                 </div>
@@ -331,7 +331,7 @@
         <section id="portfolio" class="s-portfolio target-section">
             <div class="row s-portfolio__header">
                 <div class="column large-12">
-                    <h3>Some tools/technologies that I worked on</h3>
+                    <h3 style="padding-top: 1.5rem;">Some tools/technologies that I worked on</h3>
                 </div>
             </div>
 
