Short Resume @ ebryx

--- a/index.html
+++ b/index.html
@@ -183,43 +183,46 @@
 
                         <ul>
                             <li>
-                                Continuous monitoring on several security tools and analysis of the alerts to swiftly detect and mitigate security threats.                            
+                                Monitoring and detection on security tools.                            
                             </li>
                             <li>
-                                Contribution to incident investigations by identifying root causes and collaborating on security improvements.                            
+                                Investigations and root cause analysis.                            
                             </li>
                             <li>
-                                Collaboration in incident response efforts to contain and remediate threats, minimizing potential impact and safeguarding the organization.                            
+                                Incident response and threat remediation for minimal impact.                            
                             </li>
                             <li>
-                                Development and improvement detections to cover a broader range of attack vectors and reduced false positive noise.                            
+                                Improved detections quality.                            
                             </li>
                             <li>
-                                Gap identification and analysis in the organization's infrastructure and systems, leading to an improved overall security posture.                            
+                                Gap identification and analysis for improved security posture.                            
                             </li>
                             <li>
-                                Integration of essential log sources with centralized security tools, enhancing real-time threat visibility and reducing incident response time.                            
+                                Log ingestion for enhanced threat visibility.                            
                             </li>
                             <li>
-                                Formulating comprehensive incident response processes and procedures, automating responses using native automations and other 3rd party integrations.
+                                Formulating comprehensive incident response processes and procedure.
                             </li>
                             <li>
-                                Advanced security controls for endpoints and cloud environments, resulting in decreased security incidents and potential data breaches.
+                                Automating responses using native automations and other 3rd party integrations
                             </li>
                             <li>
-                                Design and implementation of system hardening guidelines for endpoints, cloud environments and software services.
+                                Advanced security controls for endpoints and cloud environments.
                             </li>
                             <li>
-                                Purple Teaming activities with the Red Team to identify and cover gaps in logging, detections, and response capabilities.
+                                Developed system hardening guidelines for endpoints, cloud and services.
+                            </li>
+                            <li>
+                                Purple Teaming to identify and cover gaps in detections, and response.
                             </li>
                             <li>
                                 Secure service delegation between the service providers and customers.
                             </li>
                             <li>
-                                Use of Terraform Infrastructure as Code (IAC) to transform cloud infrastructure to code, enhancing security, stability, and compliance standards.
+                                Tranformation of infrastructure to code using Terraform [IAC].
                             </li>
                             <li>
-                                Promoting efficiency and accuracy by automating daily operations for the benefit of the organization and a smooth workflow.
+                                Automating daily operations for the benefit of the organization and a smooth workflow.
                             </li>
                         </ul>
                     </div>
