update main page

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <span>I'm a Security Engineer, skilled in monitoring and detection of cyber threats - equipped with a passion for strengthening organizational defenses and optimizing incident response</span>.
                         </h3>
                         <h3><span>Beyond my professional pursuits, I'm passionate about technology, fascinated by human psychology, and committed to making a positive impact through social work.</span></h3>
-                        <h3><span><a class="smoothscroll" href="#about">Scoll down</a> to learn more <a class="smoothscroll" href="#about">about me</a>.</span></h3>
+                        <h3><span><a class="smoothscroll" href="#about">Scroll down</a> to learn more <a class="smoothscroll" href="#about">about me</a>.</span></h3>
                         <!--
                     <div class="s-hero__content-social">
                         <a href="#0"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
